welcome.lessons.welcome.bat.bool1.NearHundred.scala.error
nearHundred:4: error: ')' expected but 'return' found.
	return x
        ^